Fix cropping

--- a/antenna/antenna/static/css/main.css
+++ b/antenna/antenna/static/css/main.css
@@ -13,8 +13,8 @@ body {
 
 h1 {
   background: url(../images/ernie.png) no-repeat center center;
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   background-size: 150px;
   margin: 50px auto;
   text-indent: -1000em;
